# semanticSOM

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  hello.py  pyproject.toml  requirements.txt
scripts/: dev_setup.py  hierarchy_constructor.py  som_analysis.py
src/: cfg.py
src/evaluation/: analyze_evaluation_data.py  analyze_labeling_performance.py  analyze_model_performance.py  compare_csv_targets.py  compare_models.py  count_event_target_errors.py  evaluation_jaccard_similarity.py  evaluation_levenshtein_similarity.py  evaluation_sbert_similarity.py  evaluation_vector_similarity.py  run_evaluation.py  setup.py  som_analysis.py  visualize_scores.py
src/mllm_judge/: acknowledments.md  api_benchmarks.py  get_vlm_res.py  prompt.py
src/models/: intern_vl_model.py  models.py  utils.py
src/semantics/: 2.py  3.1.py  3.2.py  activity_semantics.py  events_semantics.py  prompts.py  run_targetobject_evaluation.py  target_object.py  utils.py
src/utils/: hierarchy_constructor.py  images.py  prompt_processing.py  set_of_marks.py
tests/: test_hierarchy_constructor.py  test_images.py  test_prompt_processing.py  test_set_of_marks.py
